# fishing-funds

./: .gitignore  MIGRATION.md  README_TAURI.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: add-stock-action-flow.md  third-party-apis.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  hotkey.rs  http_client.rs  lib.rs  main.rs  store.rs  tray.rs  updater.rs
src/lib/enh/services/: README.md  coin.ts  exchange.ts  fund.ts  index.ts  log.ts  news.ts  quotation.ts  request.ts  stock.ts  time.ts  zindex.ts
src/lib/enh/services/stock-source/: README.md  STRUCTURE.md  index.ts
src/lib/enh/services/stock-source/common/: types.ts  utils.ts
src/lib/enh/services/stock-source/sources/eastmoney/: index.ts
src/lib/enh/services/stock-source/sources/sina/: index.ts
src/lib/enh/services/stock-source/sources/tencent/: index.ts
src/renderer/: index.html  index.tsx  init.ts  tauri-adapter.ts  tauri-preload.ts
src/renderer/components/Toolbar/AppCenterContent/StockSearch/: index.tsx
src/renderer/containers/: InitPage.tsx
src/renderer/store/features/: setting.ts
src/renderer/typings/: preload.d.ts
src/renderer/utils/: enhancement.ts  mock-context.ts
src/renderer/utils/hooks/: system.ts
